<resources>
    <string name="app_name">booq24</string>


    <string name="no_internet">No Internet</string>
    <string name="no_network_message">Please check your network connection.</string>


    <string name="default_error">Something went wrong, please try again later</string>
    <string name="ok">OK</string>

    <string name="Login">Login</string>
    <string name="Loginline"><u>Login</u></string>
    <string name="Signup">Signup</string>
    <string name="Signupline"><u>Sign Up</u></string>
    <string name="Skip">Skip >></string>
    <string name="Discover">Discover</string>
    <string name="Favourite">Favourite</string>
    <string name="Notification">Notification</string>
    <string name="Albums">Albums</string>
    <string name="Profile">Profile</string>
    <string name="loading">Loading...</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="next">Next</string>
    <string name="hairdresser">Hairdresser</string>
    <string name="nails">Nails</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="massage">Massage</string>
    <string name="email_address">Email Address</string>
    <string name="email_addressstar">Email Address*</string>
    <string name="password">Password</string>
    <string name="password_asstrik">Password*</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name*</string>
    <string name="first_name">First Name*</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_asstrik">Phone Number*</string>
    <string name="terms_and_conditions">Yes, I accept the Terms and Conditions</string>
    <string name="agree_to_receive_email_for_offer">Agree to receive email for offer</string>
    <string name="do_have_an_account">Do have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="you_do_not_have_an_account">You do not have an account?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="user">user</string>
    <string name="hello">Hello </string>
    <string name="guest">Guest</string>
    <string name="skip">Skip</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="pls_enter_email">Please enter your email address</string>
    <string name="pls_enter_password">Please Enter Password</string>
    <string name="pls_enter_firstname">Please Enter First Name</string>
    <string name="pls_enter_lastname">Please Enter Last Name</string>
    <string name="pls_enter_confrmpass">Please Enter Confirm Password</string>
    <string name="pls_enter_phone">Please Enter Phone Number</string>
    <string name="enter_pickup_location">Search Location</string>
    <string name="your_account">your account</string>
    <string name="my_profile">My Profile</string>
    <string name="see_all">See All</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="change_language">Change Language</string>
    <string name="wishlist">My Favourites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="categories">Categories</string>
    <string name="pls_enter_location">Please Enter Location</string>
    <string name="continues">Continue</string>
    <string name="contact_details">Booking overview</string>
    <string name="remove">Remove</string>
    <string name="select">Select</string>
    <string name="change">Change</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="appointment_confirmed">Thank you, your booking has been submitted successfully</string>
    <string name="booking_id">Booking Id</string>
    <string name="date_and_time">Date and Time</string>
    <string name="total_amount">Total Amount</string>
    <string name="pls_selectdatetime">Please select Date and Time</string>
    <string name="rate_your_experience">Rate your Experience</string>
    <string name="write_your_feedbak">Please share your feedback with us</string>
    <string name="add_feedback">Add feedback</string>
    <string name="emailsemi">Email:</string>
    <string name="phone_number_semi">Phone Number:</string>
    <string name="go_to_home">Go to Home</string>
    <string name="select_employee">Select Employee</string>
    <string name="pls_select_at_least_one_service">Please Select at least one Service</string>
    <string name="start">Start</string>
    <string name="salons">Saloons</string>
    <string name="pls_accept_terms">Please accept terms and conditions</string>
    <string name="hour">h</string>
    <string name="your_gps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="booking_details">Booking Details</string>
    <string name="choose_employees_optional">Choose employee(optional)</string>
    <string name="choose_date_and_time">Choose Date and time</string>
    <string name="payment_in_the_salon">Payment in the salon</string>
    <string name="your_appointment">Your appointment</string>
    <string name="search">Search</string>
    <string name="salon_treatment">Salon or Treatment</string>
    <string name="map">Map</string>
    <string name="current_location">Current Location</string>
    <string name="using_gps">Using GPS</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="my_booking">My Booking</string>
    <string name="select_address">Select Address</string>
    <string name="top_rated_hair">Top Rated hair</string>
    <string name="logout">Logout</string>
    <string name="salon_info">Salon Info</string>
    <string name="rating_amp_review"><![CDATA[Rating & Review]]></string>
    <string name="minutes">min</string>
    <string name="hours">h</string>
    <string name="invalid_time">Booking time should be higher than 1 hour from current time</string>
    <string name="no_employee">No Employee Available</string>
    <string name="recommend_salon">Recommend a Salon</string>
    <string name="about_the_salon">About the salon</string>
    <string name="salon_name">Salon Name*</string>
    <string name="did_you_speak">Did you speak to the salon?*</string>
    <string name="did_you_informed">Have you informed the salon about booq24?*</string>
    <string name="type_of_business">Branch of Business*</string>
    <string name="street">Street</string>
    <string name="salon_phone">Salon phone number</string>
    <string name="city">City*</string>
    <string name="about_you">About you</string>
    <string name="login">Login</string>
    <string name="pls_login_first">You are not logged in our app. Please login to use this feature.</string>
    <string name="cancel">Cancel</string>
    <string name="show_map">Show Map</string>
    <string name="pls_enter_salon_name">Please Enter Salon Name</string>
    <string name="pls_select_you_have_speak">Please let us know if you have spoken to the salon about booq24?</string>
    <string name="pls_select_business">Please Select branch of Business</string>
    <string name="pls_enter_street">Please Enter Street</string>
    <string name="pls_enter_salon_phone">Please Enter Salon Phone Number</string>
    <string name="pls_enter_city">Please Enter City</string>
    <string name="pls_enter_first_name">Please enter your first name</string>
    <string name="pls_enter_last_name">Please enter your last name</string>
    <string name="pls_select_time">Please Select Time</string>
    <string name="next_available_employee">Next Available Employee</string>
    <string name="zipcode">Zip Code</string>
    <string name="book">Book</string>
    <string name="default_notification_channel_id">1</string>
    <string name="more">More</string>
    <string name="pls_enter_validate_password">Please Enter 1 Capital,1 number and 1 specific character</string>
    <string name="pls_enter_correctpassword">Please Enter Correct Password</string>
    <string name="pls_enter_something">Please Enter Something</string>
    <string name="impessum">Legal Notice</string>
    <string name="agb">Terms and Conditions</string>
    <string name="datenschutz">Privacy and Cookie Policy</string>
    <string name="Notificationlist">Notification List</string>
    <string name="user_generated">User Generated Content Policy</string>
    <string name="update_booking">Update Booking</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_delete_account">"Are you sure you want to delete your account? Your account will be unrecoverable!"</string>
    <string name="delete">Delete</string>
    <string name="cancel_delete_account">Cancel</string>
    <string name="authentication">Authentication</string>
    <string name="sort_by">Sort by</string>
    <string name="high_rated">High Rated</string>
    <string name="new_listings">New Listings</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="most_rated">Most Rated</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="select_country">Select Country</string>
    <string name="country">Country*</string>
    <string name="name_of_contact_person">Name Of Contact Person*</string>
    <string name="pls_enter_contact_person">Please enter contact person</string>
    <string name="closed">Closed</string>
    <string name="please_give_rating_first">Please select at least one star for your rating</string>
    <string name="salon_may_confirm_your_request"><font color='#616161'>*</font>If you do not receive a booking confirmation immediately, the Salon may need to confirm your request.</string>
    <string name="pls_select_country">Please select country</string>
    <string name="served_by">Served by:</string>
    <string name="no_time_slots">No Time Slot Available...Please select another date</string>
    <string name="prices_may_vary">* The price may vary depending on the actual duration, the cost of materials or special requests.</string>

</resources>
