<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTransmission"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45dp"
        android:background="@color/colorAccent"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_12dp"
        android:gravity="center"
        android:fontFamily="@font/proxima_nova_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvTransmission">

        <TextView
            android:id="@+id/tvMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#34283E"
            android:textSize="@dimen/dimen_12dp"
            android:text="@string/male"
            android:padding="20dp"
            android:fontFamily="@font/proximanova_regular"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#34283E"
            android:textSize="@dimen/dimen_12dp"
            android:text="@string/female"
            android:padding="20dp"
            android:fontFamily="@font/proximanova_regular"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
