<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/card_rounded_shadow"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:padding="@dimen/dimen_20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/dimen_10sp"
        android:text="@string/rate_your_experience"
        android:fontFamily="@font/proxima_nova_bold"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_22sp"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:theme="@style/RatingBar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:clickable="true"
        android:isIndicator="false"
        android:rating="0"
        android:stepSize="0.1" />

    <EditText
        android:id="@+id/edtFeedback"
        android:layout_below="@id/ratingBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:background="@drawable/rounded_bg_gray9c"
        android:fontFamily="@font/proxima_nova_bold"
        android:hint="@string/write_your_feedbak"
        android:inputType="text"
        android:layout_gravity="start"
        android:gravity="start"
        android:textAlignment="textStart"
        android:paddingLeft="@dimen/dimen_5dp"
        android:paddingRight="@dimen/dimen_5dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:textColor="@color/grayish"
        android:alpha="0.6"
        android:textColorHint="@color/grayish"
        android:textSize="@dimen/dimen_14sp" />




        <Button
            android:layout_below="@id/edtFeedback"
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_5dp"
            android:text="@string/add_feedback"
            android:textAllCaps="false"
            android:fontFamily="@font/proxima_nova_bold"
            android:textColor="@color/white"
            android:background="#00A89C"
            android:textSize="@dimen/dimen_16sp" />





</RelativeLayout>